Develop (#4)
* feat: add user role system (STUDENT / ADMIN / SUPER_ADMIN)

- New Role enum with three tiers
- SUPER_ADMIN created automatically from env vars on startup
- Public registration defaults to STUDENT
- SUPER_ADMIN can create users with role selection and change roles
- JWT carries role claim, authorities mapped via SecurityFilterChain
- New AdminController with role-gated endpoints
- Separate admin-test.html for manual testing

* docs: update docs

* ci: split into fast PR scan + nightly full scan

- PR/Push: CodeQL + SpotBugs(Default/High), skip OWASP/DAST (~5-8min)
- Nightly cron (02:00 UTC): full SAST(Max/Medium) + OWASP + DAST (~30-60min)
- Fix: use mvn test instead of mvn verify to avoid duplicate SpotBugs
- Fix: CodeQL @v3 (stable), add restore-keys to Maven cache
- Fix: DAST missing MySQL service, add health-check poll loop
- Fix: add timeout-minutes, concurrency guard, artifact retention-days
- Archive old backend-ci.yml as .bak

* ci: add workflow_dispatch to PR fast scan

* Delete backend-ci.yml.bak